# Agentic-Workflows

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LLM_INFERENCE_RESEARCH_INDEX.md  LOCAL_LLM_INFERENCE_GUIDE.md  Makefile  P1_WALKTHROUGH.md  PROJECT_BLUEPRINT.md  ProjectCompass.md  QUICK_REFERENCE_LLM_INFERENCE.md  README.md  README_LLM_INFERENCE.md  Shared_plan.md  agent-planner-pe-methods.jsx  agent_state.py  deep-research-report.md  docker-compose.yml  errors.py  fib.sh  fib.txt  fib100.sh  llm_provider.py  logger.py  main.py  orchestrator.py  package-lock.json  pyproject.toml  requirements.txt  schemas.py  script.sh
.claude/agent-memory/agent-architect/: MEMORY.md
.claude/agent-memory/fork-runs-reviewer/: MEMORY.md  patterns.md
.claude/agents/: agent-architect.md  fork-runs-reviewer.md  log-ux-designer.md  project-hygiene-keeper.md  team-leader.md
.claude/skills/: review-tmp-health.md
.claude/skills/review-last-run-plan/: SKILL.md
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.5-MILESTONE-AUDIT.md  v7.3-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: concurrent-requests-and-langfuse-p5.md  cross-run-context-amnesia.md  empty-plan-after-context-retrieval-changes.md  ollama-context-truncation.md  review-verification.md
.planning/debug/resolved/: plan-invalid-empty-output-loop.md  planner-mission-progress-amnesia.md  test-failures-finish-rejection-and-timeouts.md  tool-result-truncation-dead-code.md
.planning/milestones/: v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md
.planning/phases/02-langgraph-upgrade-and-single-agent-hardening/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-04-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-specialist-subgraph-architecture/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-multi-agent-integration-and-model-routing/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-05-SUMMARY.md  04-07-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md  deferred-items.md
.planning/phases/05-observability-layer-and-architecture-snapshot/: 05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: local.env.example
db/migrations/: 001_init.sql  002_foundation.sql  003_mission_contexts.sql  004_mission_artifacts.sql  005_sub_task_cursors.sql  006_tool_result_cache.sql
directives/: phase1_langgraph.md
docker/: docker-compose.stress.yml  nginx-stress.conf
docs/: WALKTHROUGH_PHASE3.md  WALKTHROUGH_PHASE4.md  WALKTHROUGH_PHASE7.3.md  WALKTHROUGH_PHASE7.6.md  WALKTHROUGH_PHASE7.8.md  WALKTHROUGH_PHASE7.9.md  WALKTHROUGH_PHASE7.md
docs/ADR/: ADR-001-langgraph-version-upgrade.md  ADR-002-toolnode-anthropic-path.md  ADR-003-annotated-reducers.md  ADR-004-message-compaction.md
docs/architecture/: PHASE_PROGRESSION.md
docs/phases/: PHASE_1_FOUNDATION.md  PHASE_2_SINGLE_AGENT.md  PHASE_3_MULTI_AGENT.md  PHASE_4_PRODUCTION.md
execution/langgraph/: __init__.py  checkpoint_store.py  graph.py  langgraph_code_walkthrough.ipynb  langgraph_orchestrator.py  memo_store.py  mission_parser.py  policy.py  provider.py  run.py  run_audit.py  state_schema.py  tools_registry.py
execution/notebooks/: p1_checkpoint_store.ipynb  p1_graph_orchestrator.ipynb  p1_memo_store.ipynb  p1_policy.ipynb  p1_provider.ipynb  p1_state_schema.ipynb  p1_tools_registry.ipynb  phase1_langgraph_walkthrough.ipynb
p0/: llm_provider.py  main.py  orchestrator.py
p0/tests/: testenv.py
scripts/: list_models.py  stress_test.py
src/agentic_workflows/: README.md  __init__.py  errors.py  logger.py  observability.py  schemas.py
storage/migrations/: 005_sub_task_cursors.sql
test/tool_tests/: fibtest.py
tests/: conftest.py  groq_test.py  test_langgraph_flow.py  test_memo_policy.py  test_memo_store.py  test_mission_parser.py  test_new_tools.py  test_provider_config.py  test_run_audit.py
tests/eval/: conftest.py  test_eval_harness.py
tests/integration/: test_api_service.py  test_artifact_store_runtime.py  test_concurrent_postgres.py  test_context_overflow.py  test_langgraph_flow.py  test_memory_consolidation_pg.py  test_mission_context_cascade.py  test_model_router_integration.py  test_multi_mission_subgraph.py
tests/tool_tests/: fibtest.py
tests/unit/: test_action_parser.py  test_action_queue.py  test_agent_state.py  test_api_app.py  test_api_key_middleware.py  test_api_models.py  test_artifact_store.py  test_checkpoint_postgres.py  test_classify_intent.py  test_compare_texts.py  test_context_eviction.py  test_context_manager.py  test_context_manager_7_3.py  test_context_manager_truncation.py  test_context_overflow.py  test_cursor_persistence.py  test_datetime_ops.py  test_describe_db_schema.py  test_directives.py  test_embedding_provider.py  test_encode_decode.py  test_extract_table.py  test_fallback_planner.py  test_file_manager.py  test_format_converter.py  test_format_converter_extra.py  test_graph_orchestrator_wiring.py  test_handoff.py  test_json_parser_extra.py  test_keyword_map_query_context.py  test_list_directory.py  test_llama_cpp_alias.py  test_logger.py  test_math_stats.py  test_memo_policy.py  test_memo_postgres.py  test_memo_store.py  test_memoize_tool.py  test_memory_consolidation.py  test_mission_auditor.py  (+54 more)
tools/: base.py  data_analysis.py  echo.py  json_parser.py  math_stats.py  memoize.py  regex_matcher.py  sort_array.py  string_ops.py  task_list_parser.py  text_analysis.py  write_file.py
user_runs/: context.json  graph_review.md  report.txt  user_run.txt  user_run_review.md
(+337 files in other folders)
